--- a/putatoe/src/App.css
+++ b/putatoe/src/App.css
@@ -380,11 +380,14 @@ body {
     display: flex;
     flex-direction: column;
     padding: 2% 6% 0% 6%;
-    /* justify-content: center; */
-    /* align-items: center; */
     text-align: center;
     background-color: #498d95;
-    height: 100%;
+
+    position: fixed;
+    width:91%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
   }
 
   .locationPortion {
@@ -465,18 +468,19 @@ body {
   }
 
   .selectOptions {
-    margin-top: 2%;
+    /* margin-top: 2%; */
     background-color: white;
-    padding: 1%;
+    padding: 2%;
     margin: 3%;
     border-radius: 20px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content:space-between;
+    align-items:center;
     text-align: center;
-    gap: 1%;
+    gap: 2%;
+    /* height:20%; */
     box-shadow: 1px 1px 3px rgb(135, 135, 135, 0.179),
       -1px -1px 3px rgba(135, 135, 135, 0.179);
   }
@@ -486,11 +490,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: #498d95;
     font-size: 12px;
-    margin-bottom: 5%;
+    /* margin-bottom: 20%; */
 
   }
+/* .NavText{
+  margin-bottom:5%
+} */
 
   .Heading {
     display: flex;
@@ -502,15 +510,10 @@ body {
     margin: 0 3% 2% 3%;
     box-shadow: 1px 1px 3px rgb(135, 135, 135, 0.179),
       -1px -1px 3px rgba(135, 135, 135, 0.179);
-    /* justify-content: center; */
-    /* align-items:start; */
     font-size: 16px;
     color: #1f5a60;
-    /* font-family: 'Lato', sans-serif; */
-    /* font-family: 'Nunito', sans-serif; */
-    /* font-family: 'Nunito Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
-    /* font-family: 'Space Grotesk', sans-serif; */
+    
   }
 
   .constructionBlock {
@@ -549,6 +552,7 @@ body {
     border:2px solid #498d95;
     border-radius: 5px;
   }
+
   .coverblockportion img{
     width:50px;
     height:50px;
@@ -580,6 +584,7 @@ body {
     margin: 0 3% 2% 3%;
     border-radius: 10px;
   }
+ 
   .HeaderPart span{
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -731,7 +736,7 @@ body {
   text-align: center;
   align-items: center;
   gap:3%;
-  margin-bottom:10%
+  margin-bottom:20%
 }
 .servicePortion{
   border-radius: 8px;
@@ -748,4 +753,26 @@ body {
   box-shadow: 2px 1px 3px rgb(135, 135, 135, 0.179),
   -1px -1px 3px rgba(135, 135, 135, 0.179);
 }
+.logo{
+  width:39px;height:39px;
+  background-color: #498d95;
+  /* padding:50%; */
+  padding:7% 10% 7% 10%;
+  border-radius: 8px;
+}
+.bottomBar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 3% 1% 3%;
+  background-color: white;
+  width: 95%;
+  gap:9%;
+}
+
+
+
 }
