--- a/putatoe/src/App.css
+++ b/putatoe/src/App.css
@@ -1,9 +1,13 @@
 body {
   background-color: #498d9523;
-  margin: 0px;
+  margin-top: 25%;
 }
 
 @media screen and (min-width: 640px) {
+  body {
+    background-color: #498d9523;
+    margin-top: 5%;
+  }
   .Topnav {
     display: flex;
     flex-direction: row;
@@ -12,6 +16,11 @@ body {
     text-align: center;
     background-color: #498d95;
     height: 50px;
+    width:100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
   }
 
   .locationPortion {
@@ -54,6 +63,9 @@ body {
     align-items: center;
     text-align: center;
     padding: 0px 1% 0px 1%;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 24px;
+    color:white;
     /* gap:6%; */
   }
 
@@ -72,12 +84,12 @@ body {
     align-items: center;
     margin-top: 1%;
     border-radius: 20px;
-    border: 0ps solid transparent;
+    border: 0px solid transparent;
   }
 
   .rechargeCard img {
     width: 50%;
-    height: 20%;
+    height: 350px;
     border-radius: 20px;
     object-fit: cover;
     border: 0ps solid transparent;
@@ -118,7 +130,9 @@ body {
   .Heading {
     display: flex;
     flex-direction: row;
-    text-align: left;
+    text-align: center;
+    align-items: center;
+    justify-content:center ;
     background-color: white;
     padding: 1.5% 5% 1.5% 5%;
     border-radius: 10px;
@@ -371,6 +385,75 @@ body {
   box-shadow: 2px 1px 3px rgb(135, 135, 135, 0.179),
   -1px -1px 3px rgba(135, 135, 135, 0.179);
 }
+.logo{
+  width:39px;height:39px;
+  background-color: #498d95;
+  /* padding:50%; */
+  padding:7% 10% 7% 10%;
+  border-radius: 8px;
+}
+.bottomBar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 3% 1% 3%;
+  background-color: white;
+  width: 95%;
+  gap:9%;
+}
+.bottomBar Span{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color:#498d95;
+  font-size:14px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+.no-underline{
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color:white;
+  font-size:24px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+.CartDisplayPortion{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin:1%;
+  justify-content: center;
+  align-items: center;
+  gap:3%;
+  font-size:28px;
+  font-family: 'Space Grotesk', sans-serif;
+  color:#1f5a60;
+  font-weight: bolder;
+}
+.contactportion{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin:20%;
+  justify-content: center;
+  align-items: center;
+  gap:3%;
+  font-size:18px;
+  font-family: 'Space Grotesk', sans-serif;
+  color:#1f5a60;
+  font-weight: bolder;
+}
+.contactportion a{
+  color:#212222
+}
 }
 
 
@@ -382,7 +465,6 @@ body {
     padding: 2% 6% 0% 6%;
     text-align: center;
     background-color: #498d95;
-
     position: fixed;
     width:91%;
     top: 0;
@@ -434,8 +516,11 @@ body {
     align-items: center;
     text-align: center;
     padding: 0px 1% 0px 1%;
-    gap: 10px;
-    /* gap:6%; */
+    gap: 4px;
+    font-size:24px;
+    color:rgb(251, 247, 247);
+    /* font-family: 'Poppins', sans-serif;  */
+    font-family: 'Space Grotesk', sans-serif;
   }
 
   .Topnav input {
@@ -772,7 +857,55 @@ body {
   width: 95%;
   gap:9%;
 }
-
-
-
+.bottomBar Span{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color:#498d95;
+  font-size:14px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+.no-underline{
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color:white;
+  font-size:24px;
+  font-family: 'Space Grotesk', sans-serif;
+}
+.CartDisplayPortion{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin:1%;
+  justify-content: center;
+  align-items: center;
+  gap:3%;
+  font-size:28px;
+  font-family: 'Space Grotesk', sans-serif;
+  color:#1f5a60;
+  font-weight: bolder;
+}
+.contactportion{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin:20%;
+  justify-content: center;
+  align-items: center;
+  gap:3%;
+  font-size:18px;
+  font-family: 'Space Grotesk', sans-serif;
+  color:#1f5a60;
+  font-weight: bolder;
+}
+.contactportion a{
+  color:#212222;
+  margin-bottom: 20%;;
+}
 }
